--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ in the Vicinity</h4>
     </div>
 
       <div class="carousel-item">
-      <img class="d-block w-100" src="images/Gate View-01_Revised.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/Gate View-01.jpg" alt="Third slide">
         <div class="carousel-caption  d-md-block">
      <h5>Entry Gate</h5>
 
