--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
     <link rel="stylesheet" type="text/css" href="css/responsive.css?v=17082021">
     <link rel="stylesheet" type="text/css" href="css/slick.min.css?v=17082021">
 	
-    
+	<!-- Google tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-243889070-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-243889070-1');
+</script>    
+
   </head>
   <body>
 	
