--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@ in the Vicinity</h4>
 			  e.preventDefault()
 				alert("Thank you! Your form is submitted successfully." )
 			  fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-				.then(response => alert("Thank you! your form is submitted successfully." ))
+// 				.then(response => alert("Thank you! your form is submitted successfully." ))
 				.then(() => {  window.location.reload(); })
 				.catch(error => console.error('Error!', error.message))
 			})
@@ -957,7 +957,7 @@ in the Vicinity</h4>
 			  e.preventDefault()
 				alert("Thank you! Your form is submitted successfully." )
 			  fetch(scriptURL, { method: 'POST', body: new FormData(form2)})
-				.then(response => alert("Thank you! your form is submitted successfully." ))
+// 				.then(response => alert("Thank you! your form is submitted successfully." ))
 				.then(() => {  window.location.reload(); })
 				.catch(error => console.error('Error!', error.message))
 			})
