--- a/index.html
+++ b/index.html
@@ -29,7 +29,64 @@
 
   gtag('config', 'UA-243889070-1');
 </script>
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '305871538466312');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=305871538466312&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+	<script>
+    // This code should be loaded together with Meta Pixel
 
+var executeWhenElementIsVisible = function(dom_element, callback) {
+
+if (!(dom_element instanceof HTMLElement)) {
+  console.error('dom_element must be a valid HTMLElement');
+}
+
+if (typeof callback !== 'function') {
+  console.error(
+    'Second parameter must be a function, got',
+    typeof callback,
+    'instead',
+  );
+}
+
+function isOnViewport(elem) {
+  var rect = elem.getBoundingClientRect();
+  var docElem = document.documentElement;
+  return (
+    rect.top >= 0 &&
+    rect.left >= 0 &&
+    rect.bottom <= (window.innerHeight || docElem.clientHeight) &&
+    rect.right <= (window.innerWidth || docElem.clientWidth)
+  );
+}
+
+var executeCallback = (function() {
+  var wasExecuted = false;
+  return function() {
+    if (!wasExecuted && isOnViewport(dom_element)) {
+      wasExecuted = true;
+      callback();
+    }
+  };
+})();
+
+window.addEventListener('scroll', executeCallback, false);
+};
+</script>
   </head>
   <body>
 	
@@ -77,7 +134,7 @@ Sys.WebForms.PageRequestManager._initialize('ddjg', 'ctl00', ['tUpdatePanel1','U
  	<div class="container">
  	    <div class="row">     
         <a href="#topofwebpage">
-	       <img class="navbar-brand" src="images/37dlinklogo.png" alt="city 81" >
+	       <img class="navbar-brand" src="images/37dlinklogo.png" alt="city 81" id="fb-fire-pixel">
         </a>
 	  	
 
@@ -961,6 +1018,17 @@ in the Vicinity</h4>
 				.then(() => {  window.location.reload(); })
 				.catch(error => console.error('Error!', error.message))
 			})
+
+
+		// Get the element that should be visible to trigger the pixel fire
+            var element = document.getElementById('fb-fire-pixel');
+
+            // Then, set the event to be tracked when element is visible
+            // Note that second parameter is a function, not a function call
+            executeWhenElementIsVisible(element, function() {
+            fbq('track', 'Lead');
+            console.log('tracking');
+            });
        </script> 
 
          
